--- a/app/src/main/res/layout/activity_python_conditional_statement.xml
+++ b/app/src/main/res/layout/activity_python_conditional_statement.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PythonLessons.PythonComments">
+    tools:context=".PythonLessons.PythonConditionalStatement">
 
 
     <androidx.appcompat.widget.Toolbar
@@ -18,8 +18,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="COMMENTS"
-        app:titleMarginStart="70dp"
+        app:title="CONDITIONAL STATEMENTS"
+        app:titleMarginStart="50dp"
         app:titleTextColor="@color/white" />
 
     <Button
