--- a/app/src/main/res/layout/activity_python_oop.xml
+++ b/app/src/main/res/layout/activity_python_oop.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PythonLessons.PythonComments">
+    tools:context=".PythonLessons.PythonOOP">
 
 
     <androidx.appcompat.widget.Toolbar
@@ -18,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="COMMENTS"
+        app:title="OOP"
         app:titleMarginStart="70dp"
         app:titleTextColor="@color/white" />
 
