--- a/app/src/main/res/layout/fragment_python_comments_2.xml
+++ b/app/src/main/res/layout/fragment_python_comments_2.xml
@@ -1,14 +1,206 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".PythonLessons.PythonCommentsFragments.PythonCommentsFragment_2">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:fillViewport="true"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/P_Syntax_Text1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/string_literals_in_python"
+                android:textColor="#000000"
+                android:textIsSelectable="false"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+                app:layout_constraintTop_toTopOf="@+id/guideline_horizontal1"
+                tools:ignore="TextSizeCheck,VisualLintLongText" />
+
+            <TextView
+                android:id="@+id/P_Syntax_Text2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="Python ignores the string literals that are not assigned to a variable so we can use these string literals as Python Comments. "
+                android:textColor="#000000"
+                android:textIsSelectable="false"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+                app:layout_constraintTop_toBottomOf="@+id/P_Syntax_Text1"
+                tools:ignore="TextSizeCheck,VisualLintLongText" />
+
+            <TextView
+                android:id="@+id/P_Comments_Text3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Single-line comments using string literals"
+                android:textColor="#000000"
+                android:textIsSelectable="false"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+                app:layout_constraintTop_toBottomOf="@+id/P_Syntax_Text2"
+                tools:ignore="TextSizeCheck,VisualLintLongText" />
+
+            <TextView
+                android:id="@+id/P_Syntax_Text3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="On executing the above code we can see that there will not be any output so we use the strings with triple quotes(“””) as multiline comments."
+                android:textColor="#000000"
+                android:textIsSelectable="false"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+                app:layout_constraintTop_toBottomOf="@+id/P_Comments_Text3"
+                tools:ignore="TextSizeCheck,VisualLintLongText" />
+
+            <HorizontalScrollView
+                android:id="@+id/hv1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
+                app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+                app:layout_constraintTop_toBottomOf="@+id/P_Syntax_Text3">
+
+                <WebView
+                    android:id="@+id/string_literals"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/font"
+                    tools:ignore="WebViewLayout" />
+            </HorizontalScrollView>
+
+            <ImageView
+                android:id="@+id/P.Intro.ImageView1"
+                android:layout_width="54dp"
+                android:layout_height="74dp"
+                android:layout_marginTop="16dp"
+                android:contentDescription="@string/codey_image"
+                app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+                app:layout_constraintTop_toBottomOf="@+id/hv1"
+                app:srcCompat="@drawable/codey_java_dyk" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/questions_you_might_asked"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/P.Intro.ImageView1"
+                app:layout_constraintStart_toEndOf="@+id/P.Intro.ImageView1"
+                app:layout_constraintTop_toTopOf="@+id/P.Intro.ImageView1" />
+
+            <Button
+                android:id="@+id/P_Comments_btnQ1"
+                android:layout_width="271dp"
+                android:layout_height="wrap_content"
+                android:text="How do you add a comment to a class in Python?"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:theme="@style/lionelButton"
+                app:cornerRadius="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/P.Intro.ImageView1"
+                tools:ignore="TextContrastCheck" />
+
+            <Button
+                android:id="@+id/P_Comments_btnQ2"
+                android:layout_width="271dp"
+                android:layout_height="wrap_content"
+                android:text="Why do we need to use comments?"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:theme="@style/lionelButton"
+                app:cornerRadius="10dp"
+                app:layout_constraintEnd_toEndOf="@+id/P_Comments_btnQ1"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/P_Comments_btnQ1"
+                app:layout_constraintTop_toBottomOf="@+id/P_Comments_btnQ1"
+                tools:ignore="TextSizeCheck,TextContrastCheck" />
+
+            <Button
+                android:id="@+id/P_Comments_btnQ3"
+                android:layout_width="271dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="68dp"
+                android:text="What do we use and for adding comments to the Python code?"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:theme="@style/lionelButton"
+                app:cornerRadius="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/P_Comments_btnQ2"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/P_Comments_btnQ2"
+                app:layout_constraintTop_toBottomOf="@+id/P_Comments_btnQ2"
+                app:layout_constraintVertical_bias="0.0"
+                tools:ignore="TextSizeCheck,TextContrastCheck" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_vertical1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="15dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_vertical2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="15dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_horizontal1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="15dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_horizontal2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_end="15dp" />
+
+            <androidx.constraintlayout.widget.Group
+                android:id="@+id/group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:constraint_referenced_ids="guideline_vertical1,guideline_vertical2,guideline_horizontal1,guideline_horizontal2" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
